--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Midnight theme
-description: Midnight is a theme for GitHub Pages.
+title: Portfolio of Dustin's Projects
+description: My place to show off.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-midnight
